--- a/app/src/main/res/layout/activity_add_car.xml
+++ b/app/src/main/res/layout/activity_add_car.xml
@@ -271,12 +271,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/staatliches"
-            android:text="Already have account?"
+            android:text="Go back "
             android:textColor="@color/logoBlue"
-            android:textSize="16sp"
+            android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintHorizontal_bias="0.2"
             app:layout_constraintVertical_bias="0.4"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/horizontal_guideline_5" />
