--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -115,7 +115,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/buttonLogOut"
                 android:layout_marginTop="50dp"
-                android:text="Add Car"
+                android:text="Create advertisement"
                 />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
