czesciowo zrobione wyswietlanie ogloszen

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,6 +18,7 @@
     <color name="_bg__android_large___1_ek2_color">#FFFFFF</color>
     <color name="_bg__top_bar_ek1_color">#000000</color>
     <color name="_bg__frame_3_ek1_color">#385C83</color>
+    <color  name="logoGray">#8394a4</color>
     <color name="_9_30_color">#191C1B</color>
     <color name="camera_ek2_color">#2E2E2E</color>
     <color name="transparency">#00000000</color>
