--- a/app/src/main/res/layout/activity_pagemain.xml
+++ b/app/src/main/res/layout/activity_pagemain.xml
@@ -47,37 +47,19 @@
 
             <!-- For example, you can add views and set constraints within this ConstraintLayout -->
 
-            <TextView
-                android:id="@+id/textViewScrollable"
-                android:layout_width="wrap_content"
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerviewImages"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Scrollable Content"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:textSize="18sp" />
+                app:layout_constraintStart_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-            <Button
-                android:id="@+id/buttonLogOut"
-                android:layout_width="200dp"
-                android:layout_height="50dp"
-                app:layout_constraintTop_toBottomOf="@id/textViewScrollable"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginTop="50dp"
-                android:text="LogOut"
-                />
 
-            <TextView
-                android:id="@+id/user_details"
-                android:layout_width="200dp"
-                android:layout_height="50dp"
-                app:layout_constraintTop_toBottomOf="@id/buttonLogOut"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginTop="123dp"
-                android:text="hiii"
-                />
+
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
