--- a/app/src/main/res/layout/activity_pagemain.xml
+++ b/app/src/main/res/layout/activity_pagemain.xml
@@ -27,42 +27,16 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="@id/guidelineHor2"/>
 
-
-    <ScrollView
-        android:layout_width="0dp"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerviewOffers"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/topBar"
         app:layout_constraintBottom_toTopOf="@id/bottomBar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
-
-        <!-- Nested ConstraintLayout for ScrollView contents -->
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/scrollableContentLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <!-- Place your scrollable content inside this ConstraintLayout -->
-            <!-- Things you want to be scrollable -->
-
-            <!-- For example, you can add views and set constraints within this ConstraintLayout -->
-
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recyclerviewImages"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-
-
-
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </ScrollView>
+        app:layout_constraintTop_toBottomOf="@id/topBar"
+        app:layout_constraintVertical_bias="0.025" />
 
     <ImageButton
         android:id="@+id/buttonSearch"
@@ -217,4 +191,6 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.948" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
