--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -42,7 +42,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0"
-            app:layout_constraintWidth_percent="0.337" />
+            app:layout_constraintWidth_percent="0.32" />
 
         <TextView
             android:id="@+id/textView"
@@ -54,8 +54,8 @@
             android:textSize="55sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.892"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@id/login_logo"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.5" />
 
@@ -251,6 +251,7 @@
             android:backgroundTint="@color/logoRed"
             android:fontFamily="@font/staatliches"
             android:text="Sign up"
+            android:textColor="@color/white"
             android:textSize="20sp"
             app:cornerRadius="4dp"
             app:layout_constraintBottom_toTopOf="@+id/textAlreadyHaveAccount"
@@ -283,6 +284,7 @@
             android:backgroundTint="@color/logoLightBlue"
             android:fontFamily="@font/staatliches"
             android:text="Login screen"
+            android:textColor="@color/white"
             android:textSize="15sp"
             app:cornerRadius="4dp"
             app:layout_constraintBottom_toBottomOf="parent"
