--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -86,37 +86,40 @@
 
             <!-- For example, you can add views and set constraints within this ConstraintLayout -->
 
-            <TextView
-                android:id="@+id/textViewScrollable"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Scrollable Content"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:textSize="18sp" />
 
             <Button
                 android:id="@+id/buttonLogOut"
                 android:layout_width="200dp"
                 android:layout_height="50dp"
-                app:layout_constraintTop_toBottomOf="@id/textViewScrollable"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginTop="50dp"
                 android:text="LogOut"
-                />
+                android:fontFamily="@font/staatliches"
+                android:backgroundTint="@color/logoLightBlue"
+                app:cornerRadius="4dp"
+                android:textSize="15sp"
+                android:textColor="@color/white"
+                app:layout_constraintBottom_toBottomOf="@id/scrollableContentLayout"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.497"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@id/scrollableContentLayout"
+                app:layout_constraintVertical_bias="0.0" />
 
             <Button
                 android:id="@+id/buttonAddActivity"
                 android:layout_width="200dp"
                 android:layout_height="50dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/buttonLogOut"
                 android:layout_marginTop="50dp"
+                android:fontFamily="@font/staatliches"
                 android:text="Create advertisement"
-                />
+                android:backgroundTint="@color/logoLightBlue"
+                android:textColor="@color/white"
+                android:textSize="15sp"
+                app:cornerRadius="4dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/buttonLogOut" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
