--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -2,21 +2,11 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".BasketActivity">
+    tools:context=".ui.fragments.FirstFragment">
 
-    <View
-        android:id="@+id/bottomBar"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:background="@color/logoLightBlue"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/guidelineHor3"
-        app:layout_constraintBottom_toBottomOf="parent"/>
-
+    <!-- TODO: Update blank fragment layout -->
     <View
         android:id="@+id/topBar"
         android:layout_width="0dp"
@@ -26,43 +16,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="@id/guidelineHor2"/>
-
-
-    <ScrollView
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/topBar"
-        app:layout_constraintBottom_toTopOf="@id/bottomBar"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
-
-        <!-- Nested ConstraintLayout for ScrollView contents -->
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/scrollableContentLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <!-- Place your scrollable content inside this ConstraintLayout -->
-            <!-- Things you want to be scrollable -->
-
-            <!-- For example, you can add views and set constraints within this ConstraintLayout -->
-
-            <TextView
-                android:id="@+id/textViewScrollable"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="This is your basket"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:textSize="18sp" />
-
-
-
-
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </ScrollView>
 
     <ImageButton
         android:id="@+id/buttonSearch"
@@ -74,7 +27,6 @@
         app:layout_constraintStart_toStartOf="@id/guidelineVert1"
         app:layout_constraintEnd_toEndOf="@id/guidelineVert2"
         app:layout_constraintTop_toTopOf="@id/guidelineHor1" />
-
 
     <ImageButton
         android:id="@+id/buttonMenu"
@@ -88,50 +40,17 @@
         app:layout_constraintTop_toTopOf="@id/guidelineHor1" />
 
 
-    <ImageButton
-        android:id="@+id/buttonLogo"
-        android:layout_width="0dp"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerviewOffers"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintDimensionRatio="1:1"
-        app:srcCompat="@drawable/logo_w_png_1"
-        android:background="@color/logoLightBlue"
-        app:layout_constraintStart_toStartOf="@id/guidelineVert1"
-        app:layout_constraintEnd_toEndOf="@id/guidelineVert2"
-        app:layout_constraintTop_toTopOf="@id/guidelineHor4" />
-
-    <ImageButton
-        android:id="@+id/buttonBasket"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintDimensionRatio="1:1"
-        app:srcCompat="@drawable/basket"
-        android:background="@color/logoLightBlue"
-        app:layout_constraintStart_toStartOf="@id/guidelineVert3"
-        app:layout_constraintEnd_toEndOf="@id/guidelineVert4"
-        app:layout_constraintTop_toTopOf="@id/guidelineHor4" />
-
-    <ImageButton
-        android:id="@+id/buttonHeart"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintDimensionRatio="1:1"
-        app:srcCompat="@drawable/heart"
-        android:background="@color/logoLightBlue"
-        app:layout_constraintStart_toStartOf="@id/guidelineVert5"
-        app:layout_constraintEnd_toEndOf="@id/guidelineVert6"
-        app:layout_constraintTop_toTopOf="@id/guidelineHor4" />
-
-
-    <ImageButton
-        android:id="@+id/buttonUser"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintDimensionRatio="1:1"
-        app:srcCompat="@drawable/user"
-        android:background="@color/logoLightBlue"
-        app:layout_constraintStart_toStartOf="@id/guidelineVert7"
-        app:layout_constraintEnd_toEndOf="@id/guidelineVert8"
-        app:layout_constraintTop_toTopOf="@id/guidelineHor4" />
+        android:layout_marginBottom="100dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/topBar"
+        app:layout_constraintVertical_bias="0.025" />
 
 
     <androidx.constraintlayout.widget.Guideline
@@ -140,6 +59,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.09" />
+
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guidelineVert2"
@@ -217,4 +137,5 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.948" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
