--- a/app/src/main/res/layout/recycler_view_row.xml
+++ b/app/src/main/res/layout/recycler_view_row.xml
@@ -57,7 +57,7 @@
             <GridLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:columnCount="2"
+                android:columnCount="1"
                 android:rowCount="2"
                 android:layout_marginLeft="10dp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -71,6 +71,8 @@
                     android:id="@+id/textViewYearOfProduction"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_row="0"
+                    android:layout_column="0"
                     android:text="TextView"
                     android:textColor="@color/white"/>
 
@@ -78,32 +80,32 @@
                     android:id="@+id/textViewPrice"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_row="0"
-                    android:layout_column="1"
-                    android:text="TextView"
-                    android:textColor="@color/white"
-                    android:layout_marginLeft="8dp"/>
-
-                <TextView
-                    android:id="@+id/textViewMileage"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
                     android:layout_row="1"
                     android:layout_column="0"
+                    android:layout_marginTop="4dp"
                     android:text="TextView"
-                    android:textColor="@color/white"
-                    android:layout_marginTop="4dp"/>
+                    android:textColor="@color/white" />
 
-                <TextView
-                    android:id="@+id/textViewPower"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_row="1"
-                    android:layout_column="1"
-                    android:text="TextView"
-                    android:textColor="@color/white"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginTop="4dp"/>
+<!--                <TextView-->
+<!--                    android:id="@+id/textViewMileage"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_row="1"-->
+<!--                    android:layout_column="0"-->
+<!--                    android:text=""-->
+<!--                    android:textColor="@color/white"-->
+<!--                    android:layout_marginTop="4dp"/>-->
+
+<!--                <TextView-->
+<!--                    android:id="@+id/textViewPower"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_row="1"-->
+<!--                    android:layout_column="1"-->
+<!--                    android:text=""-->
+<!--                    android:textColor="@color/white"-->
+<!--                    android:layout_marginLeft="8dp"-->
+<!--                    android:layout_marginTop="4dp"/>-->
             </GridLayout>
 
 
